...
      return `Drank ${numericValue}oz`;

    case 'Sleep':
      return `Slept ${numericValue} hours`;

    case 'Activity': {
      if (labels.length === 0) return 'Journey';
      return labels
        .map((l) => (l.categoryName ? `${l.name} (${l.categoryName})` : l.name))
        .join(', ');
    }

    case 'Food':
...
