...
      focusId: extras.focusId,
    });
  }

  return (
    <Screen showBack avoidKeyboard>
      <View style={styles.container} testID="emotion-screen-3">
        <Text style={[logScreenStyles.prompt, logScreenStyles.promptPadded]}>
          {emotionEntryType?.prompt ?? emotionEntryType?.name}
        </Text>
        <SplitPane leftFlex={0.42}
          left={tier2Labels.map((label) => (
            <SplitPaneRow
...
